--- a/05 - Flex Panel Gallery/index-MINE.html
+++ b/05 - Flex Panel Gallery/index-MINE.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Flex Panels 💪</title>
   <link href='https://fonts.googleapis.com/css?family=Amatic+SC' rel='stylesheet' type='text/css'>
-  <link rel="icon" href="https://fav.farm/✅" />
+  <link rel="icon" href="https://fav.farm/🔥" />
 </head>
 <body>
   <style>
@@ -31,11 +31,13 @@
     }
 
     .panel {
+      display: flex;
       background: #6B0F9C;
       box-shadow: inset 0 0 0 5px rgba(255,255,255,0.1);
       color: white;
       text-align: center;
-      align-items: center;
+      flex-direction: column;
+      flex: 1;
       /* Safari transitionend event.propertyName === flex */
       /* Chrome + FF transitionend event.propertyName === flex-grow */
       transition:
@@ -45,17 +47,7 @@
       font-size: 20px;
       background-size: cover;
       background-position: center;
-      flex: 1;
-      justify-content: center;
-      display: flex;
-      flex-direction: column;
     }
-
-    /* .panel1 { background-image:url(https://source.unsplash.com/gYl-UtwNg_I/1500x1500); }
-    .panel2 { background-image:url(https://source.unsplash.com/rFKUFzjPYiQ/1500x1500); }
-    .panel3 { background-image:url(https://images.unsplash.com/photo-1465188162913-8fb5709d6d57?ixlib=rb-0.3.5&q=80&fm=jpg&crop=faces&cs=tinysrgb&w=1500&h=1500&fit=crop&s=967e8a713a4e395260793fc8c802901d); }
-    .panel4 { background-image:url(https://source.unsplash.com/ITjiVXcwVng/1500x1500); }
-    .panel5 { background-image:url(https://source.unsplash.com/3MNzGlQM7qs/1500x1500); } */
 
     .panel1 { background-image: url(https://images.unsplash.com/photo-1729698331344-ca8ad1dff0df?q=80&w=2574&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D); }
     .panel2 { background-image: url(https://images.unsplash.com/photo-1729729552784-789caecb8b2c?w=800&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxmZWF0dXJlZC1waG90b3MtZmVlZHw1fHx8ZW58MHx8fHx8); }
@@ -63,23 +55,16 @@
     .panel4 { background-image: url(https://images.unsplash.com/photo-1729731321992-5fdb6568816a?q=80&w=2574&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D); }
     .panel5 { background-image: url(https://images.unsplash.com/photo-1727461895261-9a006b52f342?q=80&w=2670&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D); }
 
-
-
-    /* Flex Items */
+    /* Flex Children */
     .panel > * {
       margin: 0;
       width: 100%;
       transition: transform 0.5s;
-      flex: 1 0 auto;
+      flex: 1;
       display: flex;
       justify-content: center;
       align-items: center;
     }
-
-    .panel > *:first-child { transform: translateY(-100%); }
-    .panel.open-active > *:first-child { transform: translateY(0); }
-    .panel > *:last-child { transform: translateY(100%); }
-    .panel.open-active > *:last-child { transform: translateY(0); }
 
     .panel p {
       text-transform: uppercase;
@@ -88,13 +73,29 @@
       font-size: 2em;
     }
 
+    .panel p:nth-child(1) {
+      transform: translateY(-100%);
+    }
+
+    .panel.open p:nth-child(1) {
+      transform: translateY(0em);
+    }
+
     .panel p:nth-child(2) {
       font-size: 4em;
     }
 
+    .panel p:nth-child(3) {
+      transform: translateY(100%);
+    }
+
+    .panel.open p:nth-child(3) {
+      transform: translateY(0em);
+    }
+
     .panel.open {
-      flex: 5;
       font-size: 40px;
+      flex: 5;
     }
 
     @media only screen and (max-width: 600px) {
@@ -102,6 +103,7 @@
         font-size: 1em;
       }
     }
+
   </style>
 
 
@@ -135,22 +137,20 @@
 
   <script>
     const panels = document.querySelectorAll('.panel');
+    panels.forEach(panel => {
+      panel.addEventListener('click', (event) => {
+        if (panel.classList.contains('open')) {
+          panel.classList.remove('open');
+        } else {
+          panel.classList.add('open');
+        }
+        // panel.classList.toggle('open');
+      });
+    });
 
-    function toggleOpen() {
-      console.log('Hello');
-      this.classList.toggle('open');
-    }
-
-    function toggleActive(e) {
-      console.log(e.propertyName);
-      if (e.propertyName.includes('flex')) {
-        this.classList.toggle('open-active');
-      }
-    }
-
-    panels.forEach(panel => panel.addEventListener('click', toggleOpen));
-    panels.forEach(panel => panel.addEventListener('transitionend', toggleActive));
   </script>
+
+
 
 </body>
 </html>
