--- a/11 - Custom Video Player/index.html
+++ b/11 - Custom Video Player/index.html
@@ -23,6 +23,7 @@
      </div>
    </div>
 
-  <script src="scripts.js"></script>
+  <!-- <script src="scripts.js"></script> -->
+  <script src="scripts-MINE.js"></script>
 </body>
 </html>
